--- a/application-sets/my-application-sets/many-apps-many-cluster.yml
+++ b/application-sets/my-application-sets/many-apps-many-cluster.yml
@@ -18,10 +18,10 @@ spec:
               # selector:
               #   matchLabels:
               #     argocd.argoproj.io/secret-type: cluster
-          template:      
-            spec:
-              # The project the application belongs to.
-              project: default
+          - template:      
+              spec:
+                # The project the application belongs to.
+                project: default
 
   template:
     metadata:
